// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive volumes and packing options should honour an xrCompress configuration 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack config: <sandbox>/compress.ltx",
    "Pack source: <resources>/gamedata/configs",
    "Pack destination: <sandbox>/configured",
    "Wrote <sandbox>/configured/cfg.db",
    "Packed 7 file(s) into 1 volume(s), took <duration>",
    "Summary: 7 compressed, 0 stored, 0 aliased, 1 skipped",
    "Size: 0.008 MB source, 0.004 MB written",
  ],
}
`;

exports[`archive volumes and packing options should keep them when the skip list is off 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/kept",
    "Wrote <sandbox>/kept/a.db",
    "Packed 9 file(s) into 1 volume(s), took <duration>",
    "Summary: 8 compressed, 1 stored, 0 aliased, 0 skipped",
    "Size: 0.008 MB source, 0.004 MB written",
  ],
}
`;

exports[`archive volumes and packing options should skip editor leftovers by default 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/skipped",
    "Wrote <sandbox>/skipped/a.db",
    "Packed 8 file(s) into 1 volume(s), took <duration>",
    "Summary: 8 compressed, 0 stored, 0 aliased, 1 skipped",
    "Size: 0.008 MB source, 0.004 MB written",
  ],
}
`;

exports[`archive volumes and packing options should split a pack across volumes 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <resources>/gamedata",
    "Pack destination: <sandbox>/split",
    "Wrote <sandbox>/split/gamedata.db0",
    "Wrote <sandbox>/split/gamedata.db1",
    "Wrote <sandbox>/split/gamedata.db2",
    "Packed 22 file(s) into 3 volume(s), took <duration>",
    "Summary: 8 compressed, 14 stored, 0 aliased, 0 skipped",
    "Size: 2.369 MB source, 2.365 MB written",
  ],
}
`;

exports[`archive volumes and packing options should store instead of compressing and write an xdb 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <resources>/gamedata/configs",
    "Pack destination: <sandbox>/stored",
    "Wrote <sandbox>/stored/cfg.xdb",
    "Packed 8 file(s) into 1 volume(s), took <duration>",
    "Summary: 0 compressed, 8 stored, 0 aliased, 0 skipped",
    "Size: 0.008 MB source, 0.009 MB written",
  ],
}
`;

exports[`archive volumes and packing options should unpack a single volume on its own 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpack source: <sandbox>/split/gamedata.db0",
    "Unpack destination: <sandbox>/from-first",
    "Summary: 1 archive(s), 26 file(s), 1.163 MB compressed, 1.168 MB real",
    "Unpacking files, parallel 32",
    "Unpacked archive, took <duration> (preparation <duration>, unpack <duration>)",
  ],
}
`;

exports[`archive volumes and packing options should unpack a whole volume set 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpack source: <sandbox>/split",
    "Unpack destination: <sandbox>/from-set",
    "Summary: 3 archive(s), 32 file(s), 2.364 MB compressed, 2.369 MB real",
    "Unpacking files, parallel 32",
    "Unpacked archive, took <duration> (preparation <duration>, unpack <duration>)",
  ],
}
`;

exports[`archive volumes and packing options should unpack on a single thread 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpack source: <sandbox>/configured/cfg.db",
    "Unpack destination: <sandbox>/serial",
    "Summary: 1 archive(s), 9 file(s), 0.003 MB compressed, 0.008 MB real",
    "Unpacking files, parallel 1",
    "Unpacked archive, took <duration> (preparation <duration>, unpack <duration>)",
  ],
}
`;

exports[`archive volumes and packing options should write the expected files 1`] = `
[
  {
    "path": "compress.ltx",
    "sha256": "42efa649cb57f4f152ac3ca2329b1b07e247d87f5584153ad3e25327d36e6b63",
    "size": 55,
  },
  {
    "path": "configured/cfg.db",
    "sha256": "cb430d8709d9476d434e16447072ac95d52a00ce4aee1da38b3cc67d4c6c945b",
    "size": 3888,
  },
  {
    "path": "from-first/gamedata/configs/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "from-first/gamedata/configs/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "from-first/gamedata/configs/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "from-first/gamedata/configs/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "from-first/gamedata/configs/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "from-first/gamedata/configs/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "from-first/gamedata/configs/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "from-first/gamedata/configs/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
  {
    "path": "from-first/gamedata/meshes/ogf/dev_bolt_hud.ogf",
    "sha256": "5d0f5f542199b99ccef02648b12a189b0bb8d6b17adb4223712c72f2303b50a1",
    "size": 13841,
  },
  {
    "path": "from-first/gamedata/meshes/ogf/notes_paper_1.ogf",
    "sha256": "ef49409071d4f3be76c82e6ffa995c2386d50aad5e5eff7663df11133d0c5a6b",
    "size": 1976,
  },
  {
    "path": "from-first/gamedata/meshes/ogf/part_none.ogf",
    "sha256": "221cb7d7f667253d87e3eae93350aff3ae9c5f0f5ed178f035a43310b35956fd",
    "size": 1069,
  },
  {
    "path": "from-first/gamedata/meshes/ogf/wpn_pm_lod.ogf",
    "sha256": "bf41871ea019632e506b5efa4d748ab2d18240c8c8840a8e0e3a1d921694ff2e",
    "size": 7321,
  },
  {
    "path": "from-first/gamedata/meshes/omf/wpn_knife_hud_animation.omf",
    "sha256": "2facf6d4c269eeb168a894bcb3a04584f050f94669bd60eeb8869b93b121df6d",
    "size": 159,
  },
  {
    "path": "from-first/gamedata/meshes/omf/wpn_mp5_hud_animation.omf",
    "sha256": "71c4c92308378f045fb7962d751884003ce41557984b75ad8bb0374cce11bdd4",
    "size": 3230,
  },
  {
    "path": "from-first/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
    "sha256": "5fed0250b53cc35dc79e38611e1ca32c997c77f0c39690401ef65861810e9686",
    "size": 3355,
  },
  {
    "path": "from-first/gamedata/particles.xr",
    "sha256": "0786f7746df643a37b6420b652744270d1fdc15787740bad1c1c33b222a81037",
    "size": 1184775,
  },
  {
    "path": "from-set/gamedata/configs/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "from-set/gamedata/configs/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "from-set/gamedata/configs/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "from-set/gamedata/configs/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "from-set/gamedata/configs/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "from-set/gamedata/configs/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "from-set/gamedata/configs/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "from-set/gamedata/configs/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
  {
    "path": "from-set/gamedata/meshes/ogf/dev_bolt_hud.ogf",
    "sha256": "5d0f5f542199b99ccef02648b12a189b0bb8d6b17adb4223712c72f2303b50a1",
    "size": 13841,
  },
  {
    "path": "from-set/gamedata/meshes/ogf/notes_paper_1.ogf",
    "sha256": "ef49409071d4f3be76c82e6ffa995c2386d50aad5e5eff7663df11133d0c5a6b",
    "size": 1976,
  },
  {
    "path": "from-set/gamedata/meshes/ogf/part_none.ogf",
    "sha256": "221cb7d7f667253d87e3eae93350aff3ae9c5f0f5ed178f035a43310b35956fd",
    "size": 1069,
  },
  {
    "path": "from-set/gamedata/meshes/ogf/wpn_pm_lod.ogf",
    "sha256": "bf41871ea019632e506b5efa4d748ab2d18240c8c8840a8e0e3a1d921694ff2e",
    "size": 7321,
  },
  {
    "path": "from-set/gamedata/meshes/omf/wpn_knife_hud_animation.omf",
    "sha256": "2facf6d4c269eeb168a894bcb3a04584f050f94669bd60eeb8869b93b121df6d",
    "size": 159,
  },
  {
    "path": "from-set/gamedata/meshes/omf/wpn_mp5_hud_animation.omf",
    "sha256": "71c4c92308378f045fb7962d751884003ce41557984b75ad8bb0374cce11bdd4",
    "size": 3230,
  },
  {
    "path": "from-set/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
    "sha256": "5fed0250b53cc35dc79e38611e1ca32c997c77f0c39690401ef65861810e9686",
    "size": 3355,
  },
  {
    "path": "from-set/gamedata/particles.xr",
    "sha256": "0786f7746df643a37b6420b652744270d1fdc15787740bad1c1c33b222a81037",
    "size": 1184775,
  },
  {
    "path": "from-set/gamedata/shaders.xr",
    "sha256": "526e9363e42764c56a39bae72de854d89d65dfc1fe9aca0231e576456b8720c9",
    "size": 191315,
  },
  {
    "path": "from-set/gamedata/spawns/all.spawn",
    "sha256": "a976f8f3741e4f6befcc246b49bfe9477b97b6514b89a12c932fc366fe4c1002",
    "size": 1051254,
  },
  {
    "path": "from-set/gamedata/textures/act_cat_bump.thm",
    "sha256": "b343b3f1db388b598a3acf9374e81a50693dc37f8e9d652ffb2ba9b7991b6fc1",
    "size": 138,
  },
  {
    "path": "from-set/gamedata/textures/prop_lampa_g.dds",
    "sha256": "d2173b19a162948957e7110c5a2807a3223571b0ade2e61c65345b3e7c7534ea",
    "size": 184,
  },
  {
    "path": "from-set/gamedata/textures/ui/ui_test_sheet.dds",
    "sha256": "7c3b7b767f4d9aec695041276d13db7c6798e1485004f213a668716d22021a5a",
    "size": 16512,
  },
  {
    "path": "from-set/gamedata/textures/ui_empty.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "kept/a.db",
    "sha256": "e9aff26176d275aceece5ba47272a0b3e24aaa1dcff7e13cedbdf9ea470c12e2",
    "size": 4100,
  },
  {
    "path": "serial/gamedata/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "serial/gamedata/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "serial/gamedata/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "serial/gamedata/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "serial/gamedata/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "serial/gamedata/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "serial/gamedata/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "skipped/a.db",
    "sha256": "42b004762da3897ca1fa519616401bdb0b96ec5294cdb9eeda2a1ea4f260b6f6",
    "size": 4071,
  },
  {
    "path": "source/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "source/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "source/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "source/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "source/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "source/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "source/readme.txt",
    "sha256": "9a0f2b10fc240fbd22e58339818c4925a785357c01add69f031786f866c2cede",
    "size": 9,
  },
  {
    "path": "source/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "source/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
  {
    "path": "split/gamedata.db0",
    "sha256": "a01cf96c4cc2d4c4c427ae01aa9a0404b586e5cf94a4f9b357828c8433a7fb3a",
    "size": 1220075,
  },
  {
    "path": "split/gamedata.db1",
    "sha256": "cd8c6f0be9a72e6406b12132a1e7b2182d960de4e377b5d14f0a11d3f0093ee0",
    "size": 1242807,
  },
  {
    "path": "split/gamedata.db2",
    "sha256": "0e1b2ff1aa08739a2cbbe1842618c2ee3fe2633d737d3eaec4c40c3266f49ed6",
    "size": 17279,
  },
  {
    "path": "stored/cfg.xdb",
    "sha256": "fb1be0ec37d2ce7e20fabc6d0321fd9f319f546a1d00b15f03ea247066c5215a",
    "size": 9211,
  },
]
`;
